# nxc-rs

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NETWORK.md  README.md  SECURITY.md  clippy.toml  config.toml  deny.toml  install.ps1  install.sh  rustfmt.toml
.claude/skills/lint-and-validate/: SKILL.md
.claude/skills/nxc-rs-ci-stabilizer/: SKILL.md
.claude/skills/nxc-rs-error-handling-migration/: SKILL.md
.codex/skills/nxc-rs-crypto-migration/: SKILL.md
.codex/skills/nxc-rs-unsafe-code-remediation/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/skills/code-reviewer/: SKILL.md
.gemini/skills/nxc-rs-codeql-resolver/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bot-runner.yml  build-binaries.yml  ci.yml  claude-code-action.yml  codeql.yml  docker-ghcr.yml  lint-and-test.yml  python.yml  release.yml  rust.yml
Formula/: nxc-rs.rb
config/: nxc.toml
crates/agent/: Cargo.toml
crates/agent/src/: client.rs  lib.rs
crates/capture/: Cargo.toml
crates/capture/src/: ingestion.rs  lib.rs  topology.rs
crates/common/src/: config.rs  error.rs  events.rs  lib.rs  nxc.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/mcp/: Cargo.toml
crates/netsage/: Cargo.toml
crates/netsage-agent/: Cargo.toml
crates/netsage-agent/src/: agent.rs  lib.rs  stream.rs
crates/netsage-auth/: Cargo.toml
crates/netsage-auth/src/: lib.rs
crates/netsage-capture/: Cargo.toml
crates/netsage-capture/src/: ingestion.rs  lib.rs  topology.rs
crates/netsage-common/: Cargo.toml
crates/netsage-common/src/: lib.rs
crates/netsage-config/: Cargo.toml
crates/netsage-config/src/: lib.rs
crates/netsage-mcp/: Cargo.toml
crates/netsage-mcp/src/: lib.rs
crates/netsage-pybridge/: Cargo.toml
crates/netsage-pybridge/src/: lib.rs  protocol.rs
crates/netsage-session/: Cargo.toml
crates/netsage-session/src/: lib.rs
crates/netsage-tools/: Cargo.toml
crates/netsage-tools/src/: lib.rs
crates/netsage-tools/src/tools/: geoip.rs  ping.rs  port_scan.rs
crates/netsage-tui/: Cargo.toml
crates/netsage-tui/src/: lib.rs
crates/netsage/src/: main.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/src/tools/: dns.rs  http_probe.rs  mod.rs  ssh.rs  traceroute.rs  whois.rs
crates/tui/: Cargo.toml
docs/: README.md  agent_runtime.md  architecture.md  index.html  security.md
modules/: hello.rhai
nxc-rs/ai/: Cargo.toml
nxc-rs/ai/src/: lib.rs
nxc-rs/ai/src/agent/: mod.rs
nxc-rs/ai/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
nxc-rs/ai/src/tools/: db.rs  mod.rs  modules.rs  protocol.rs  scan.rs  utils.rs
nxc-rs/auth/: Cargo.toml
nxc-rs/auth/src/: certificate.rs  kerberos.rs  lib.rs  ntlm.rs  registry.rs
nxc-rs/auth/src/kerberos/: asn1.rs  ccache.rs  client.rs  crypto.rs
nxc-rs/db/: Cargo.toml
nxc-rs/db/src/: lib.rs
nxc-rs/modules/: Cargo.toml
nxc-rs/modules/src/: adb_screenshot.rs  adb_shell.rs  adcs.rs  add_computer.rs  advanced_modules.rs  advanced_recon.rs  asreproasting.rs  backup_operator.rs  bloodhound.rs  cms_enum.rs  coerce_plus.rs  cors_vuln.rs  cred_harvesting.rs  daclread.rs  dcshadow.rs  delegation.rs  docker_enum.rs  dpapi.rs  enum_av.rs  enum_dns.rs  enum_impersonate.rs  enum_mssql.rs  enum_shares.rs  enum_trusts.rs  execute_assembly.rs  find_computer.rs  ftp_anon.rs  get.rs  get_desc_users.rs  get_info_users.rs  gmsa.rs  gpp_autologin.rs  gpp_password.rs  graphql_enum.rs  group_mem.rs  http_paths.rs  iot_cam.rs  jwt_audit.rs  kerberoasting.rs  laps.rs  (+65 more)
nxc-rs/nxc/: Cargo.toml
nxc-rs/nxc-auth/: Cargo.toml
nxc-rs/nxc-auth/src/: lib.rs
nxc-rs/nxc-cli/: Cargo.toml
nxc-rs/nxc-cli/src/: main.rs
nxc-rs/nxc-db/src/: lib.rs
nxc-rs/nxc-modules/: Cargo.toml
nxc-rs/nxc-protocols/: Cargo.toml
nxc-rs/nxc-protocols/src/: lib.rs
nxc-rs/nxc-targets/: Cargo.toml
nxc-rs/nxc/src/: cli.rs  handlers.rs  main.rs  output.rs  profiling.rs  relay.rs  reporting.rs  socks.rs  telegram.rs
nxc-rs/protocols/: Cargo.toml
nxc-rs/protocols/src/: ad_setup.rs  adb.rs  connection.rs  dns.rs  docker.rs  errors.rs  ftp.rs  http.rs  ilo.rs  ipmi.rs  kube.rs  ldap.rs  lib.rs  mssql.rs  mysql.rs  network.rs  nfs.rs  obfuscation.rs  opcua.rs  postgresql.rs  rdp.rs  redis.rs  rpc.rs  smb.rs  snmp.rs  socks.rs  ssh.rs  telnet.rs  vnc.rs  wifi.rs  winrm.rs  wmi.rs
nxc-rs/resilience/: Cargo.toml
nxc-rs/resilience/src/: cache.rs  circuit_breaker.rs  lib.rs  pool.rs  retry.rs  timeout.rs
nxc-rs/targets/: Cargo.toml
nxc-rs/targets/src/: lib.rs
python/: pyproject.toml  requirements.txt
python/netsage_tools/: __init__.py  server.py
python/netsage_tools/tools/: __init__.py  diagnostics.py  discovery.py  dns.py  intelligence.py  lan.py  performance.py  remote.py
wiki/: AI-Orchestrator-Guide.md  Core-Architecture.md  Home.md  Installation.md  Telegram-APEX-REAPER.md
wiki/Modules/: Credential-Harvesting.md  LDAP-Enumeration.md  MSSQL-Offensive.md  Persistence-Lateral-Movement.md  RS-Exclusive-Advanced.md  SMB-AD-Core.md
wiki/Protocols/: DNS-Protocol.md  IPMI-Protocol.md  Kubernetes-Protocol.md  iLO-iDRAC-Protocol.md
