[workspace]
members = [
    "nxc-rs/auth",
    "nxc-rs/protocols",
    "nxc-rs/modules",
    "nxc-rs/db",
    "nxc-rs/targets",
    "nxc-rs/nxc",
    "nxc-rs/ai",
    "nxc-rs/resilience"
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["thrive-spectrexq"]
description = "NetExec-RS — Network Execution Tool (Rust)"
license = "BSD-2-Clause"
repository = "https://github.com/thrive-spectrexq/nxc-rs"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.51", features = ["full", "time"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
toml = "0.8"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.10"
ssh2 = "0.9"
hostname = "0.4"
async-trait = "0.1"
ldap3 = "0.12"
suppaftp = { version = "8.0", features = ["tokio", "tokio-rustls-ring"] }
opcua = { version = "0.12", default-features = false, features = ["client"] }


dotenvy = "0.15"
tokio-socks = "0.5"
socks = "0.3"
once_cell = "1.18"
dashmap = "6"

# NetExec-RS dependencies
md4 = "0.10"
hmac = "0.12"
md-5 = "0.10"
rc4 = "0.2"
aes = "0.9"
des = "0.9"
csv = "1.3"
zeroize = { version = "1.8", features = ["derive"] }
colored = "3.1"
hex = "0.4"

# Kerberos, encryption & registry parsing
kerberos_asn1 = "0.2"
kerberos_constants = "0.0.9"
pbkdf2 = { version = "0.12", features = ["hmac"] }
rasn = "0.28"
sha1 = "0.10"
sha2 = "0.10"
cbc = "0.2"
cipher = { version = "0.5", features = ["alloc"] }
pem = "3.0"
der-parser = "9.0"
num-bigint = "0.4"
digest = "0.11"
ctap2-proto = "0.1"
tempfile = "3.10"
nt-hive = "0.3.0"
image = "0.25"
p12 = "0.6"
x509-parser = "0.18"
aes-kw = "0.3"
bytes = "1"
