[workspace]
members = [
    "nxc-rs/auth",
    "nxc-rs/protocols",
    "nxc-rs/modules",
    "nxc-rs/db",
    "nxc-rs/targets",
    "nxc-rs/nxc",
    "nxc-rs/ai",
    "nxc-rs/resilience"
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["thrive-spectrexq"]
description = "NetExec-RS — Network Execution Tool (Rust)"
license = "BSD-2-Clause"
repository = "https://github.com/thrive-spectrexq/nxc-rs"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full", "time"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
toml = "0.8"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.10"
ssh2 = "0.9"
hostname = "0.4"
async-trait = "0.1"
ldap3 = "0.12"
suppaftp = { version = "8.0", features = ["tokio", "tokio-rustls-ring"] }
opcua = { version = "0.12", default-features = false, features = ["client"] }


dotenvy = "0.15"
tokio-socks = "0.5"
socks = "0.3"
once_cell = "1.18"
dashmap = "6"

# NetExec-RS dependencies (unified on digest 0.10.x for p12 compatibility)
md4 = "0.11"
hmac = "0.12"
md-5 = "0.10"
rc4 = "0.2"
aes = "0.8"
des = "0.9"
csv = "1.3"
zeroize = { version = "1.8", features = ["derive"] }
colored = "3.1"
hex = "0.4"

# Kerberos, encryption & registry parsing
kerberos_asn1 = "0.2"
kerberos_constants = "0.0.9"
pbkdf2 = { version = "0.12", features = ["hmac"] }
rasn = "0.28"
sha1 = "0.10"
sha2 = "0.10"
cbc = "0.1"
cipher = { version = "0.4", features = ["alloc"] }
pem = "3.0"
der-parser = "9.0"
num-bigint = "0.4"
digest = "0.10"
ctap2-proto = "0.1"
tempfile = "3.10"
nt-hive = "0.3.0"
image = "0.25"
p12 = "0.6"
x509-parser = "0.18"
aes-kw = "0.3"
bytes = "1"

# ─── Workspace Lints ─────────────────
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Correctness — critical for a security tool
# TODO: Promote to "deny" after fixing existing instances
unwrap_used = "warn"
expect_used = "warn"

# Idiomatic Rust
uninlined_format_args = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
redundant_clone = "deny"
trivially_copy_pass_by_ref = "deny"

# Manual pattern replacements
manual_map = "deny"
manual_filter = "deny"
manual_flatten = "deny"
manual_ok_or = "deny"
manual_strip = "deny"
manual_range_contains = "deny"
manual_non_exhaustive = "deny"
manual_unwrap_or = "deny"

# Unnecessary operations
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_to_owned = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_question_mark = "deny"

# ─── Build Profiles ─────────────────────────────────────────────
[profile.dev]
# Keep line tables for backtraces, skip expensive full debug info
debug = 1

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
