[package]
name = "netsage-agent"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-tools = { path = "../netsage-tools" }
netsage-pybridge = { path = "../netsage-pybridge" }
netsage-session = { path = "../netsage-session" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
