[package]
name = "netsage-agent"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-common = { path = "../netsage-common" }
netsage-tools = { path = "../netsage-tools" }
netsage-session = { path = "../netsage-session" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
