[package]
name = "netsage-capture"
version.workspace = true
edition.workspace = true

[dependencies]
pcap = { version = "2.4.0", optional = true }
etherparse = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
netsage-auth = { path = "../netsage-auth" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hostname = "0.4.0"
chrono = { workspace = true }

[features]
default = ["pcap"]
pcap = ["dep:pcap"]
