[package]
name = "netsage-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-tools = { path = "../netsage-tools" }
netsage-pybridge = { path = "../netsage-pybridge" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
