[package]
name = "netsage-tui"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tui-textarea = { workspace = true }
anyhow = { workspace = true }
netsage-capture = { path = "../netsage-capture", default-features = false }
netsage-agent = { path = "../netsage-agent" }
