[package]
name = "netsage-tui"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-common = { path = "../netsage-common" }
netsage-agent = { path = "../netsage-agent" }
netsage-capture = { path = "../netsage-capture" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tui-textarea = { workspace = true }
anyhow = { workspace = true }
