[package]
name = "netsage"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-agent = { path = "../netsage-agent" }
netsage-tui = { path = "../netsage-tui" }
netsage-tools = { path = "../netsage-tools" }
netsage-pybridge = { path = "../netsage-pybridge" }
netsage-capture = { path = "../netsage-capture", default-features = false }
netsage-session = { path = "../netsage-session" }
netsage-config = { path = "../netsage-config" }
netsage-mcp = { path = "../netsage-mcp" }
netsage-auth = { path = "../netsage-auth" }
tokio = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
