[package]
name = "nxc-rs"
version.workspace = true
edition.workspace = true
description = "◈ NetExec-RS ◈ — Network Execution Tool (Pure Rust)"

[[bin]]
name = "nxc"
path = "src/main.rs"

[dependencies]
netsage-common = { path = "../common" }
netsage-agent = { path = "../agent" }
netsage-tui = { path = "../tui" }
netsage-tools = { path = "../tools" }
netsage-capture = { path = "../capture", default-features = false }
netsage-session = { path = "../session" }
netsage-config = { path = "../config" }
netsage-mcp = { path = "../mcp" }
netsage-auth = { path = "../auth" }
nxc-auth = { path = "../../nxc-rs/auth" }
nxc-protocols = { path = "../../nxc-rs/protocols" }
nxc-modules = { path = "../../nxc-rs/modules" }
nxc-db = { path = "../../nxc-rs/db" }
nxc-targets = { path = "../../nxc-rs/targets" }
tokio = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
indicatif = { workspace = true }
