[package]
name = "netsage-tools"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-common = { path = "../common" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
surge-ping = { workspace = true }
trust-dns-resolver = { workspace = true }
ssh2 = { workspace = true }
maxminddb = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
