[package]
name = "netsage-tui"
version.workspace = true
edition.workspace = true

[dependencies]
netsage-common = { path = "../common" }
netsage-agent = { path = "../agent" }
netsage-capture = { path = "../capture" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tui-textarea = { workspace = true }
anyhow = { workspace = true }
