[package]
name = "nxc-modules"
version.workspace = true
edition.workspace = true
description = "NetExec-RS module system — secretsdump, BloodHound, Kerberoast, and more"

[dependencies]

nxc-protocols = { path = "../protocols" }
nxc-auth = { path = "../auth" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ldap3 = { workspace = true }
bytes = "1.11.1"
