[package]
name = "nxc-modules"
version.workspace = true
edition.workspace = true
description = "NetExec-RS module system — secretsdump, BloodHound, Kerberoast, and more"

[dependencies]

nxc-protocols = { path = "../protocols" }
nxc-auth = { path = "../auth" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ldap3 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
bytes = "1.11.1"
reqwest = { workspace = true, features = ["multipart"] }
zip = "8.5"
base64 = "0.22"
uuid = { workspace = true }
rhai = { version = "1.19", features = ["sync"] }
ssh2 = { workspace = true }
suppaftp = { workspace = true }
rasn = { workspace = true }

[features]
opcua-support = ["nxc-protocols/opcua-support"]
