[package]
name = "nxc"
version.workspace = true
edition.workspace = true
description = "NetExec-RS — Network Execution Tool"

[[bin]]
name = "nxc"
path = "src/main.rs"

[dependencies]
nxc-auth = { path = "../auth" }
nxc-protocols = { path = "../protocols" }
nxc-modules = { path = "../modules" }
nxc-db = { path = "../db" }
nxc-targets = { path = "../targets" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
teloxide = { workspace = true }
dotenvy = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true }
html-escape = "0.2"
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
csv.workspace = true
