[package]
name = "nxc"
version.workspace = true
edition.workspace = true
description = "NetExec-RS — Network Execution Tool"
license.workspace = true
repository.workspace = true

[package.metadata.deb]
maintainer = "thrive-spectrexq>"
copyright = "2026, thrive-spectrexq"
license-file = ["../../LICENSE", "4"]
extended-description = """
NetExec-RS is a massive monolithic offensive post-exploitation and orchestration network tool.
"""
section = "admin"
priority = "optional"
assets = [
    ["../../README.md", "usr/share/doc/nxc-rs/README.md", "644"],
]

[[bin]]
name = "nxc"
path = "src/main.rs"

[dependencies]
nxc-auth = { path = "../auth" }
nxc-protocols = { path = "../protocols" }
nxc-modules = { path = "../modules" }
nxc-db = { path = "../db" }
nxc-targets = { path = "../targets" }
nxc-ai = { path = "../ai" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

dotenvy = { workspace = true }
hostname = { workspace = true }
reqwest = { workspace = true }
html-escape = "0.2"
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
csv.workspace = true
