[package]
name = "nxc-protocols"
version.workspace = true
edition.workspace = true
description = "NetExec-RS protocol handlers — SMB, LDAP, WinRM, RDP, MSSQL, SSH, FTP, VNC, WMI, NFS"

[dependencies]
ldap3 = "0.11"

nxc-auth = { path = "../auth" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh2 = { workspace = true }
tiberius = "0.12"
reqwest = "0.12"
tokio-util = { version = "0.7.18", features = ["compat"] }
uuid = { workspace = true, features = ["v4"] }
bytes = "1.11.1"
