[package]
name = "nxc-protocols"
version.workspace = true
edition.workspace = true
description = "NetExec-RS protocol handlers — SMB, LDAP, WinRM, RDP, MSSQL, SSH, FTP, VNC, WMI, NFS"

[dependencies]
ldap3 = "0.12"

base64 = "0.22"
tokio-rustls = "0.26"
rustls-pki-types = "1.0"
nxc-auth = { path = "../auth" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssh2 = { workspace = true }
tiberius = { version = "0.12", features = ["winauth", "integrated-auth-gssapi"] }
reqwest = "0.12"
tokio-util = { version = "0.7.18", features = ["compat"] }
uuid = { workspace = true, features = ["v4"] }
bytes = "1.11.1"
des = { workspace = true }
suppaftp = { workspace = true }
rand = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp"] }
mysql_async = "0.36"
tokio-postgres = "0.7"
snmp = "0.2"
tokio-socks = { workspace = true }
socks = { workspace = true }
url = "2.5.8"
rasn = "0.28"
image = "0.24"
hex.workspace = true

[features]
winauth = []
integrated-auth-gssapi = []
