[package]
name = "nxc-targets"
version.workspace = true
edition.workspace = true
description = "NetExec-RS target parsing (CIDR, ranges, files) and concurrent execution engine"

[dependencies]
netsage-common = { path = "../../crates/common" }
nxc-auth = { path = "../auth" }
nxc-protocols = { path = "../protocols" }
nxc-modules = { path = "../modules" }
nxc-db = { path = "../db" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
indicatif = { workspace = true }
