[package]
name = "nxc-targets"
version.workspace = true
edition.workspace = true
description = "NetExec-RS target parsing (CIDR, ranges, files) and concurrent execution engine"

[lints]
workspace = true

[dependencies]

nxc-auth = { path = "../auth" }
nxc-protocols = { path = "../protocols" }
nxc-modules = { path = "../modules" }
nxc-db = { path = "../db" }
nxc-resilience = { path = "../resilience" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
